[package]
name = "scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
#Logging and global settings.
log = "0.4"
log4rs = "1.0"
env_logger = "0.10"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0"
futures = "0.3"
futures-util = "0.3"

# UI related.
eframe = "0.29.1"
egui = "0.31.1"
image = "0.24"
tinyfiledialogs = "3.9"
tokio = { version = "1.0", features = ["full"] }

# Scraper related.
regex = "1.10"
