[package]
name = "scraper"
version = "0.1.0"
edition = "2024"

# Windows build doesn't build becaure tinyfiledialogs tries to compile
# natice C code that defpends on headers not available in toolchain
# So for link use tinyfiledialogs and for Windows use a differnet
# FileDialog.

[target.x86_64-pc-windows-gnu.dependencies]
rfd = "0.11"
[target.x86_64-unknown-linux-gnu.dependencies]
tinyfiledialogs = "3.0"

[dependencies]
#Logging and global settings.
log = "0.4"
log4rs = "1.0"
env_logger = "0.10"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0"
futures = "0.3"
futures-util = "0.3"
chrono = "0.4.41"

# UI related.
eframe = "0.31.1"
egui = "0.31.1"
walkers = "0.42.0"
epaint = "0.31.1"
geo-types = "0.7.16"
image = "0.24"
tokio = { version = "1.0", features = ["full"] }

# Scraper related.
regex = "1.10"
